--- a/src/PostPage/PostPage.css
+++ b/src/PostPage/PostPage.css
@@ -3,20 +3,19 @@
   margin: 0 auto;
   padding: 50px 40px;
   width: 65%;
-  height: 850px;
-  border:1px solid black;
+  height: 100%;
 }
 
 h1.post-h1 {
   text-align: center;
 }
 
-input,
+.post input,
 textarea,
 select {
   display: block;
   margin: 20px auto;
-  width: 80%;
+  width: 100%;
   height: 30px;
   padding: 10px;
 }
@@ -24,12 +23,11 @@ select {
 label {
   display: block;
   margin: auto;
-  width: 80%;
 }
 
-select {
+select{
   height: 50px;
-  width:82%;
+  width:100%;
 }
 
 textarea {
