--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin-bottom: 100px;
-  color:black;
+  color: black;
 }
 
 .app h1.front-page-descrip {
@@ -12,7 +12,28 @@ body {
 .app img.sr-logo {
   display: block;
   margin: 0 auto;
-  width:500px;
+  width: 500px;
+}
+
+input {
+  display: block;
+  margin: 40px auto;
+}
+
+.school-options {
+  margin: 20px auto;
+  width:50%;
+}
+
+.school-options button {
+  margin: 10px auto;
+  padding: 10px;
+  width:100%;
+  background-color: #ccc;
+}
+
+.school-options button:hover {
+  background-color: green;
 }
 
 @media (max-width: 500px) {
