--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -7,9 +7,7 @@ h3.right {
 
 h1.title:hover,
 h3.right:hover {
-  /* color:blue;
-  text-decoration:underline;
-  font-size:20px; */
+  color:#2d2df2;
 }
 
 
