--- a/src/Discover/Discover.css
+++ b/src/Discover/Discover.css
@@ -3,21 +3,41 @@ select#sort {
   display: block;
   padding: 8px;
   margin: 0 auto;
+  font-size: 13px;
+  border: none;
 }
 
 input#searched {
-  display: block;
+  display: inline-block;
   margin: 0 auto;
-  width:80%;
+  width: 70%;
+  height: 30px;
+  border: 1px solid rgb(213, 210, 210);
+  padding: 10px;
+}
+
+.searchBtn {
+  display: inline;
   height:50px;
 }
 
-form.searchBar button {
-  width: 17%;
-  padding: 10px;
-  cursor: pointer;
+input#searched:focus {
+  outline: 0;
+}
+
+.groupSearch{
   display: block;
-  margin: 20px auto;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+form.searchBar button {
+  border: 1px solid black;
+  background-color: white;
+}
+
+form.searchBar button:hover{
+  color:blue;
 }
 
 @media (max-width: 449px) {
