--- a/src/PostPage/PostPage.css
+++ b/src/PostPage/PostPage.css
@@ -2,12 +2,16 @@
   display: block;
   margin: 0 auto;
   padding: 50px 80px;
-  width: 65%;
+  width: 57%;
   height: 100%;
+  background-color: white;
+  border-radius:10px;
+  box-shadow: 1px 2px 8px 7px rgb(216, 221, 227);
 }
 
 h1.post-h1 {
   text-align: center;
+  font-weight: 400;
 }
 
 .post input,
@@ -18,28 +22,49 @@ select {
   width: 100%;
   height: 30px;
   padding: 10px;
+  border: 1px solid transparent;
+}
+
+.post input, textarea{
+  border-bottom: 1px solid black;
+}
+
+.post input, textarea:focus, select{
+  outline:0;  
 }
 
 label {
   display: block;
   margin: auto;
+  font-size: 17px;
+  padding: 8px;
 }
 
 select{
   height: 50px;
   width:100%;
+  border: 1px solid black;
 }
 
 textarea {
-  height: 70px;
-  resize: none;
+  resize: vertical;
 }
 
 button.btn-post {
   display: block;
   margin: 20px auto;
-  width: 60%;
-  height: 30px;
+  padding: 15px 39px;
+  width:120px;
+  font-weight: 400;
+  font-size:16px;
+  color:#fff;
+  border-radius:10px;
+  background-color: #6dabe4;
+  border: none;
+}
+
+button.btn-post:hover {
+  background-color: #5ba1e3;
 }
 
 @media (max-width: 600px) {
