--- a/src/PostPage/PostPage.css
+++ b/src/PostPage/PostPage.css
@@ -5,7 +5,7 @@
   width: 57%;
   height: 100%;
   background-color: white;
-  border-radius:10px;
+  border-radius: 10px;
   box-shadow: 1px 2px 8px 7px rgb(216, 221, 227);
 }
 
@@ -25,12 +25,15 @@ select {
   border: 1px solid transparent;
 }
 
-.post input, textarea{
+.post input,
+textarea {
   border-bottom: 1px solid black;
 }
 
-.post input, textarea:focus, select{
-  outline:0;  
+.post input,
+textarea:focus,
+select {
+  outline: 0;
 }
 
 label {
@@ -40,9 +43,9 @@ label {
   padding: 8px;
 }
 
-select{
+select {
   height: 50px;
-  width:100%;
+  width: 100%;
   border: 1px solid black;
 }
 
@@ -54,11 +57,11 @@ button.btn-post {
   display: block;
   margin: 20px auto;
   padding: 15px 39px;
-  width:120px;
+  width: 120px;
   font-weight: 400;
-  font-size:16px;
-  color:#fff;
-  border-radius:10px;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 10px;
   background-color: #6dabe4;
   border: none;
 }
@@ -74,15 +77,21 @@ button.btn-post:hover {
     width: 100%;
   }
 
-  textarea{
-    height:50px;
+  .post input,
+  textarea,
+  select {
+    padding: 0px;
   }
 
-  select{
-    width:100%;
+  textarea,
+  select {
+    height: 50px;
   }
 
+  label {
+    padding: 8px 8px 8px 0px;
+  }
   .club-proposal {
-    width:140px;
+    width: 150px;
   }
 }
